; ModuleID = '/home/carl/AnghaBench/sway/sway/commands/extr_bind.c_find_keycode.c'
source_filename = "/home/carl/AnghaBench/sway/sway/commands/extr_bind.c_find_keycode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.xkb_keymap = type { i32 }
%struct.keycode_matches = type { i64, i32, i32 }

@config = common dso_local global %struct.TYPE_2__* null, align 8
@XKB_KEY_NoSymbol = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xkb_keymap*, i32, i8*)* @find_keycode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @find_keycode(%struct.xkb_keymap* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.xkb_keymap*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.keycode_matches*, align 8
  store %struct.xkb_keymap* %0, %struct.xkb_keymap** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @config, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i64 @xkb_state_key_get_one_sym(i32 %11, i32 %12)
  store i64 %13, i64* %7, align 8
  %14 = load i64, i64* %7, align 8
  %15 = load i64, i64* @XKB_KEY_NoSymbol, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %3
  br label %34

18:                                               ; preds = %3
  %19 = load i8*, i8** %6, align 8
  %20 = bitcast i8* %19 to %struct.keycode_matches*
  store %struct.keycode_matches* %20, %struct.keycode_matches** %8, align 8
  %21 = load %struct.keycode_matches*, %struct.keycode_matches** %8, align 8
  %22 = getelementptr inbounds %struct.keycode_matches, %struct.keycode_matches* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* %7, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %34

26:                                               ; preds = %18
  %27 = load i32, i32* %5, align 4
  %28 = load %struct.keycode_matches*, %struct.keycode_matches** %8, align 8
  %29 = getelementptr inbounds %struct.keycode_matches, %struct.keycode_matches* %28, i32 0, i32 2
  store i32 %27, i32* %29, align 4
  %30 = load %struct.keycode_matches*, %struct.keycode_matches** %8, align 8
  %31 = getelementptr inbounds %struct.keycode_matches, %struct.keycode_matches* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 8
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %31, align 8
  br label %34

34:                                               ; preds = %17, %26, %18
  ret void
}

declare dso_local i64 @xkb_state_key_get_one_sym(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
